--- a/app/assets/stylesheets/less/_mixins.less
+++ b/app/assets/stylesheets/less/_mixins.less
@@ -19,9 +19,9 @@
 
 // Drop shadows
 .box-shadow(@shadow: 0 1px 2px rgba(0, 0, 0, .25)){
-    -webkit-box-shadow: @shadow;
-    -moz-box-shadow: @shadow;
-    box-shadow: @shadow;
+    -webkit-box-shadow: @shadow !important;
+    -moz-box-shadow: @shadow !important;
+    box-shadow: @shadow !important;
 }
 
 // Transitions
