--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2957,6 +2957,8 @@ div.markdown-preview {
         }
         .disabled {
             resize:none;
+            height:80px;
+            background:#f3f3f3;
         }
         input[type="radio"]{
           display: none;
@@ -2996,9 +2998,6 @@ div.markdown-preview {
             margin-right: 5px;
         }
     }
-    /*a {
-        margin-left: 5px;
-    }*/
 }
 .board-actrow {
     margin:20px 0;
@@ -5665,3 +5664,21 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     }
 }
 
+.loginDialog {
+    width:460px; margin-left:-230px;
+    input { .box-shadow(none); }
+    .login-form-wrap { margin:20px auto !important; }
+    .error {
+        display:none;
+        margin-bottom:20px;
+        color:#E74C3C;
+        .yobicon-error { vertical-align: middle; margin-right:5px; font-size:13px; }
+    }
+    .act-row {
+        margin-bottom:20px;
+        input.checkbox { margin-top:4px !important; }
+        label.bg-checkbox { display:inline-block; }
+    }
+    .btns-row { width:auto; }
+    .fullsize { width:100%; }
+}
