--- a/app/views/common/usermenu.scala.html
+++ b/app/views/common/usermenu.scala.html
@@ -126,7 +126,7 @@
         </a>
     </li>
     <li class="gnb-usermenu-item">
-        <a href="@routes.UserApp.loginForm()" class="user-item-btn" >
+        <a href="@routes.UserApp.loginForm()" class="user-item-btn" login-required>
             @Messages("title.login")
         </a>
     </li>
