--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -5414,6 +5414,17 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         .box-shadow(inset 5px 0px 0px @state-closed);
     }
 
+    .outdated-label {
+        .border-radius(3px);
+        padding:3px 6px;
+        background: @yobi-gray-dark;
+        color: @white;
+    }
+
+    &:not(.outdated) .outdated-label {
+        display: none
+    }
+
     .content {
         display: box;
         display: -webkit-box;
