--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -34,6 +34,7 @@
 <link rel="stylesheet" type="text/css" media="all" href="@routes.Assets.at("stylesheets/yobi.css")">
 
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery/jquery-1.9.0.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery/jquery.browser.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery/jquery.pjax.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/common/yobi.Common.js")"></script>
 </head>
