--- a/app/views/git/view.scala.html
+++ b/app/views/git/view.scala.html
@@ -74,17 +74,14 @@
                 }
             </div>
 
-            <div id="actOnOpen" class="mr5" style="@if(pull.isMerging == false && pull.isOpen()){display:inline-block;}else{display:none;}">
-                @if(isAllowed(UserApp.currentUser(), pull.asResource(), Operation.CLOSE)) {
+            <div class="mr5" style="display:inline-block;">
+                @if(isAllowed(UserApp.currentUser(), pull.asResource(), Operation.UPDATE)) {
+                <a href="@routes.PullRequestApp.editPullRequestForm(pull.toProject.owner, pull.toProject.name, pull.number)" class="ybtn">@Messages("button.edit")</a>
+                }
+                @if(pull.isOpen() && isAllowed(UserApp.currentUser(), pull.asResource(), Operation.CLOSE)) {
                     <a data-request-method="post" href="@routes.PullRequestApp.close(project.owner, project.name, pull.number)" class="ybtn">@Messages("pullRequest.close")</a>
                 }
-                @if(isAllowed(UserApp.currentUser(), pull.asResource(), Operation.UPDATE)) {
-                    <a href="@routes.PullRequestApp.editPullRequestForm(pull.toProject.owner, pull.toProject.name, pull.number)" class="ybtn">@Messages("button.edit")</a>
-                }
-            </div>
-
-            <div id="actOnClosed" class="mr5" style="@if(pull.isMerging == false && pull.isClosed()) {display:inline-block;}else{display:none;}">
-                @if(isAllowed(UserApp.currentUser(), pull.asResource(), Operation.REOPEN)) {
+                @if(pull.isClosed() && isAllowed(UserApp.currentUser(), pull.asResource(), Operation.REOPEN)) {
                     <a data-request-method="post" href="@routes.PullRequestApp.open(project.owner, project.name, pull.number)" class="ybtn">@Messages("pullRequest.reopen")</a>
                 }
             </div>
