--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -4694,24 +4694,48 @@ label.issue-item-row {
 // -- pull request
 .pull-request-wrap {
     margin-bottom:20px;
+    display: table;
+
+    .request-box {
+        border: 1px solid lightgray;
+        border-radius: 3px !important;
+        display:inline-block; width:350px;
+        .repo { color:@secondary; font-size:14px; }
+        .dropdown-toggle { width:350px; }
+        .dropdown-menu   { width:350px; }
+        padding: 5px;
+    }
+
+    label {
+        font-weight: bold;
+        cursor: default;
+    }
 
     .request-from {
-        display:inline-block; width:435px;
-        .repo { color:@secondary; font-size:14px; }
-        .dropdown-toggle { width:435px; }
-        .dropdown-menu   { width:435px; }
+        .request-box;
     }
 
     .request-to {
-        display:inline-block; width:435px;
-        .repo { color:@primary; font-size:14px; }
-        .dropdown-toggle { width:435px; }
-        .dropdown-menu   { width:435px; }
+        .request-box;
     }
 
     .arrow {
-        display:inline-block; width:83px;
+        display:table-cell; vertical-align:middle;
+        width:50px;
         text-align:center;
+        font-size: xx-large;
+        color: lightgray;
+    }
+}
+
+.request-summary {
+    float: right;
+    width: 100%;
+    th {
+        text-align: left;
+    }
+    td {
+        text-align: right;
     }
 }
 
