change .ybtn-watching color

--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -830,12 +830,12 @@ span.issue-label {
     }
 
     &.ybtn-watching {
-        background-color : #FFDC51 !important;
-        border:1px solid #E0C006;
+        background-color : #f4efea !important;
+        border:1px solid #C9C5C1;
         color:#333;
 
         &:hover, &:focus {
-            background-color: #F0CD02 !important;
+            background-color: #e0dad4 !important;
         }
     }
 
@@ -846,6 +846,10 @@ span.issue-label {
         &:hover, &:focus {
             background-color:  !important;
         }
+    }
+
+    &.pressed {
+        .box-shadow(inset 1px 1px 1px rgba(0, 0, 0, 0.15));
     }
 
     &.dropdown-toggle {
