--- a/app/views/git/partial_info.scala.html
+++ b/app/views/git/partial_info.scala.html
@@ -64,10 +64,11 @@
 
     @if(isAllowed(UserApp.currentUser(), pull.asResource(), Operation.ACCEPT)) {
         @if(pull.isAcceptable){
-            <a id="btnAccept" href="@if(pull.isConflict == true){#}else{@routes.PullRequestApp.accept(project.owner, project.name, pull.number)}" data-request-method="post"
-               class="ybtn @if(pull.isConflict == true){ ybtn-disabled } else { ybtn-success }">@Messages("pullRequest.accept")</a>
+            <a id="btnAccept" href="@routes.PullRequestApp.accept(project.owner, project.name, pull.number)" data-request-method="post"
+               class="ybtn ybtn-success">@Messages("pullRequest.accept")</a>
         } else {
-            <button class="ybtn ybtn-disabled" data-toggle="tooltip" data-placement="top" title="@Messages("pullRequest.not.enough.review.point", pull.getLackingReviewerCount())">@Messages("pullRequest.accept")</button>
+            <button class="ybtn ybtn-disabled" data-toggle="tooltip" data-placement="top"
+               title="@pull.getMessageForDisabledAcceptButton">@Messages("pullRequest.accept")</button>
         }
     }
 </div>
