Review: enlarge .btnPop button size mini to small

--- a/app/views/git/viewChanges.scala.html
+++ b/app/views/git/viewChanges.scala.html
@@ -122,7 +122,7 @@
                         @if(pull.isDiffable){
                             @views.html.partial_diff(pull.getDiff(commitId), pull.getCodeCommentThreadsForChanges(commitId), pull.toProject, pull.toProject)
                         }
-                        <div class="btnPop"><button type="button" class="ybtn ybtn-info ybtn-mini"><i class="yobicon-post2"></i></button></div>
+                        <div class="btnPop"><button type="button" class="ybtn ybtn-info ybtn-small"><i class="yobicon-post2"></i></button></div>
                     </div>
 
                     <div class="board-comment-wrap">
