CodeBrowser: Add notice for large file
When a user tries to show a large file in CodeBrowser, show a notice to
tell that we can't show the file because of the size and a button to
show the file in raw. The button means "You can see the file in raw
instead".

If the user is a Site administrator, tell also that you can loose the
size limit.

--- a/app/views/code/partial_view_file.scala.html
+++ b/app/views/code/partial_view_file.scala.html
@@ -85,8 +85,23 @@
     }
     } else {
     @** Text(Code) **@
-    <div id="codeVal" class="hidden">@if(files.get("data") != null){@fieldText(files, "data")}</div>
-    <pre id="showCode" class="code-wrap" data-mimeType="@files.get("mimeType")"></pre>
+    @defining(files.get("data")) { data =>
+      @data match {
+        case null if files.get("size") != null && files.get("size").getIntValue > 0 => {
+          <p>
+          @Messages("code.tooBigFileForCodeBrowser", playRepository.PlayRepository.MAX_FILE_SIZE_CAN_BE_VIEWED)
+          @if(UserApp.currentUser.isSiteManager) {
+          <br/>@Messages("code.looseFileSizeLimitForCodeBrowser")
+          }
+          <br/><a href="@filePath" target="_blank" class="filehref ybtn">@Messages("code.viewRaw")</a>
+          </p>
+        }
+        case _ => {
+          <div id="codeVal" class="hidden">@if(files.get("data") != null){@fieldText(files, "data")}</div>
+          <pre id="showCode" class="code-wrap" data-mimeType="@files.get("mimeType")"></pre>
+        }
+      }
+    }
     }
 </div>
 }
