--- a/app/views/issue/create.scala.html
+++ b/app/views/issue/create.scala.html
@@ -92,9 +92,7 @@
                                     <a href="@routes.MilestoneApp.newMilestoneForm(project.owner, project.name)" target="_blank" class="ybtn ybtn-success ybtn-small">@Messages("milestone.menu.new")</a>
                                 } else {
                                     <select id="milestoneId" name="milestoneId"
-                                            data-toggle="select2" data-format="milestone"
-                                            data-placeholder="@Messages("issue.milestone.selectDefault")">
-                                        <option></option>
+                                            data-toggle="select2" data-format="milestone">
                                         <option value="@Milestone.NULL_MILESTONE_ID" selected="selected">@Messages("issue.noMilestone")</option>
                                         @for(milestone <- milestones){
                                         <option value="@milestone.id" data-state="@milestone.state">
