--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -113,9 +113,7 @@
                                 <a href="@routes.MilestoneApp.newMilestoneForm(project.owner, project.name)" target="_blank" class="ybtn ybtn-success ybtn-small">@Messages("milestone.menu.new")</a>
                             } else {
                                 <select id="milestoneId" name="milestoneId"
-                                            data-toggle="select2" data-format="milestone"
-                                            data-placeholder="@Messages("issue.milestone.selectDefault")">
-                                        <option></option>
+                                            data-toggle="select2" data-format="milestone">
                                         <option value="@Milestone.NULL_MILESTONE_ID" @if(!hasMilestone){ selected }>
                                             @Messages("issue.noMilestone")
                                         </option>
