--- a/app/views/issue/partial_assignee.scala.html
+++ b/app/views/issue/partial_assignee.scala.html
@@ -23,8 +23,7 @@
 @import utils.AccessControl._
 
 <select id="assignee" name="assignee.user.id"
-        data-toggle="select2" data-format="user"
-        data-placeholder="@Messages("issue.assignee.selectDefault")">
+        data-toggle="select2" data-format="user">
     <option value="@User.anonymous.id" @if(issue == null || issue.assignee == null){selected}>@Messages("issue.noAssignee")</option>
     @if(isAllowed(UserApp.currentUser(), project.asResource(), Operation.ASSIGN_ISSUE)) {
     <option value="@UserApp.currentUser().id">@Messages("issue.assignToMe")</option>
