--- a/app/views/issue/partial_assignee.scala.html
+++ b/app/views/issue/partial_assignee.scala.html
@@ -29,10 +29,12 @@
     @if(isAllowed(UserApp.currentUser(), project.asResource(), Operation.ASSIGN_ISSUE)) {
     <option value="@UserApp.currentUser().id">@Messages("issue.assignToMe")</option>
     }
-    @defining(issue.getAuthor) { issueAuthor =>
-        @if(!UserApp.currentUser.equals(issueAuthor) &&
-            isAllowed(issueAuthor, project.asResource(), Operation.ASSIGN_ISSUE)) {
-            <option value="@issueAuthor.id">@Messages("issue.assignToAuthor")</option>
+    @if(issue != null){
+        @defining(issue.getAuthor) { issueAuthor =>
+            @if(!UserApp.currentUser.equals(issueAuthor) &&
+                isAllowed(issueAuthor, project.asResource(), Operation.ASSIGN_ISSUE)) {
+                <option value="@issueAuthor.id">@Messages("issue.assignToAuthor")</option>
+            }
         }
     }
     @for(user <- project.relatedUsers){
