--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -739,6 +739,11 @@ span.issue-label {
         font-size: 26px !important;
     }
 
+    &.ybtn-fullsize {
+        display:block;
+        width:100%;
+    }
+
     &.ybtn-padding {
         padding:13px 30px !important;
         font-size: 20px !important;
