UI: set style of other auth forms same with login

--- a/app/views/site/lostPassword.scala.html
+++ b/app/views/site/lostPassword.scala.html
@@ -22,14 +22,14 @@
 
 @siteLayout(message, utils.MenuType.NONE) {
 <div class="page full">
-  <div class="center-wrap tag-line-wrap signup">
+  <div class="center-wrap tag-line-wrap reset-password">
     <h1 class="title">
       @Html(Messages("title.resetPasswordFor", utils.Config.getSiteName))
     </h1>
     <p class="tag-line">@Messages("app.description")</p>
   </div>
 
-  <div class="signup-form-wrap frm-wrap">
+  <div class="login-form-wrap frm-wrap">
     @if(isSent){
 		<div class="alert alert-success">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -62,8 +62,8 @@
         </dd>
       </dl>
 
-      <div class="btns-row mt20">
-        <button type="submit" class="ybtn ybtn-success">@Messages("button.confirm")</button>
+      <div class="btns-row">
+        <button type="submit" class="ybtn ybtn-primary ybtn-large ybtn-fullsize">@Messages("button.confirm")</button>
       </div>
     </form>
   </div>
