--- a/app/views/user/resetPassword.scala.html
+++ b/app/views/user/resetPassword.scala.html
@@ -23,14 +23,14 @@
 
 @siteLayout(message, utils.MenuType.NONE) {
 <div class="page full">
-  <div class="center-wrap tag-line-wrap signup">
+  <div class="center-wrap tag-line-wrap reset-password">
     <h1 class="title">
       @Html(Messages("title.resetPasswordFor", utils.Config.getSiteName))
     </h1>
     <p class="tag-line">@Messages("app.description")</p>
   </div>
 
-  <div class="signup-form-wrap frm-wrap">
+  <div class="login-form-wrap frm-wrap">
     <form action="@routes.PasswordResetApp.resetPassword()" method="post" name="passwordReset">
       <input type="hidden" name="hashString" value="@hashString">
       <dl>
@@ -50,7 +50,7 @@
       </dl>
 
       <div class="btns-row">
-        <button type="submit" class="ybtn ybtn-success">@Messages("button.confirm")</button>
+        <button type="submit" class="ybtn ybtn-primary ybtn-fullsize">@Messages("button.confirm")</button>
       </div>
     </form>
   </div>
