--- a/app/views/user/signup.scala.html
+++ b/app/views/user/signup.scala.html
@@ -70,11 +70,12 @@
         </dd>
       </dl>
 
+      <div class="btns-row">
+        <button type="submit" class="ybtn ybtn-primary ybtn-large ybtn-fullsize">@Messages("user.signupBtn")</button>
+      </div>
+
       <div class="act-row">
         @Messages("user.isAlreadySignupUser") <a href="@routes.UserApp.loginForm()" class="go-login">@Messages("title.login")</a>
-      </div>
-      <div class="btns-row">
-        <button type="submit" class="ybtn ybtn-success">@Messages("user.signupBtn")</button>
       </div>
     </form>
   </div>
