Login: clicking comment, vote button shows login dialog

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -38,7 +38,7 @@
         background-color: rgba(0, 0, 0, 0.35);
         position: absolute;
         width: 100%;
-        z-index: 10000;
+        z-index: 1000;
 
         .gnb-inner {
             .logo {
@@ -2955,10 +2955,10 @@ div.markdown-preview {
         .nav {
           margin-bottom: 0;
         }
-        .disabled {
+        textarea.disabled {
             resize:none;
             height:80px;
-            background:#f3f3f3;
+            background:transparent;
         }
         input[type="radio"]{
           display: none;
