--- a/app/views/issue/view.scala.html
+++ b/app/views/issue/view.scala.html
@@ -268,7 +268,7 @@
                                 }
                             </a>
                         } else {
-                            <span class="ybtn ybtn-disabled" style="color:#777;" data-toggle="tooltip" title="@Messages("user.login.alert")">
+                            <span class="ybtn ybtn-disabled" style="color:#777;" data-toggle="tooltip" title="@Messages("user.login.alert")" data-login="required">
                                 <span class="heart"><i class="yobicon-hearts"></i></span>
                                 <span class="desc">@Messages("issue.vote")</span>
                                 @if(issue.voters.size > 0) {
