--- a/app/views/common/scripts.scala.html
+++ b/app/views/common/scripts.scala.html
@@ -55,7 +55,9 @@
 </div>
 @**<!-- //yobi.ui.Spinner -->**@
 
+@if(UserApp.currentUser.isAnonymous){
 @common.loginDialog()
+}
 
 <script type="text/javascript" src="@routes.Application.jsMessages()"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/jquery/jquery.tmpl.js")"></script>
