--- a/app/views/common/commentForm.scala.html
+++ b/app/views/common/commentForm.scala.html
@@ -44,31 +44,8 @@
             </div>
         </div>
     </form>
-    <script type="text/javascript">
-        $(document).ready(function(){
-            var welCommentForm = $("#comment-form");
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/common/yobi.CommentForm.js")"></script>
 
-            welCommentForm.on("submit", function() {
-                if ($(this).find("textarea[name=contents]").val().trim().length > 0) {
-                    yobi.ui.Spinner.show({"bUseDimmer": true});
-                    welCommentForm.data("bOnSubmit", true);
-                } else {
-                    $yobi.notify(Messages("post.comment.empty"), 3000);
-                    return false;
-                }
-            });
-
-            // -- ESC 키를 눌러 폼 전송을 중단하는 경우
-            $(window).on("keydown", function(weEvt){
-                var bOnSubmit = welCommentForm.data("bOnSubmit");
-
-                if(weEvt.keyCode === 27 && bOnSubmit){
-                    yobi.ui.Spinner.hide();
-                    welCommentForm.data("bOnSubmit", false);
-                }
-            });
-        });
-    </script>
 } else {
 
     <div class="write-comment-box">
